tg-1310 [Backoffice] Al crear un usuario chequear que la persona que no tenga usuario

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -2,6 +2,9 @@
 attribute.required=Attribute mandatory
 value.mandatory=Valor mandatory
 
+#### Create user ####
+user.exists = This person already has an user
+
 #### RequestUserDto ####
 name.mandatory=Name mandatory
 surname.mandatory=Surname mandatory
