--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -2,6 +2,9 @@
 attribute.required=Atributo obligatorio
 value.mandatory=Valor obligatorio
 
+#### Create user ####
+user.exists = Esta persona ya tiene un usuario
+
 #### RequestUserDto ####
 name.mandatory=Nombre obligatorio
 surname.mandatory=Apellido obligatorio
