tg-1311 Al crear un profesional chequear que la persona no sea profesional

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -104,6 +104,8 @@ document.pdf.diagnosis.title.chaco=illnesses
 document.pdf.diagnosis.title.minsal=Diagnostics
 document.pdf.maindiagnosis.title.minsal=Main diagnosis
 
+####### Healthcare Professional #######
+healthcareprofessional.exists=This person is already registered as a professional 
 
 ####### Outpatient #######
 problem.dates.not.after= End date cannot be before of start date
