--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -105,6 +105,8 @@ document.pdf.diagnosis.title.tandil=Enfermedades
 document.pdf.diagnosis.title.minsal=Diagnósticos
 document.pdf.maindiagnosis.title.minsal=Diagnóstico principal
 
+####### Healthcare Professional #######
+healthcareprofessional.exists=Esta persona ya está registrada como profesional en el sistema
 
 ####### Outpatient #######
 problem.dates.not.after= La fecha de fin no puede ser anterior al inicio del problema.
