tg-1379 refactor mejora ruteos de turnos/home usando children routes

--- a/front-end/webapp/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/turnos/es-AR.json
@@ -6,7 +6,8 @@
 				"APPLY_FOR": "Solicitar",
 				"NEW_AGENDA": "Nueva agenda",
 				"SEARCH": "Buscar profesional"
-			}
+			},
+			"SELECT_AGENDA": "Seleccione una agenda"
 		},
 		"new-agenda": {
 			"NEW_AGENDA": "Nueva agenda",
