--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -116,3 +116,11 @@ diary.period.invalid.range=start date of diary have to be before end date
 diary.period.invalid.year=The period for the diary must correspond to the same calendar year
 diary.period.invalid.overlap=A similar agenda already exists defined in an overlapping period of time
 diary.attention.invalid.overlap=It is not possible to define overlapping opening hours
+
+####### Appointments #######
+appointment.error.validation=Error validation
+appointment.overlapping=Unavailable appointment
+appointment.new.diary.inactive=Diary inactive
+appointment.new.professional.assign.not.allowed=Diary does not allow assignments by professional
+appointment.new.professional.id.invalid=Diary does not belong to the professional
+appointment.not.allow.new.overturn=New overturn is not allowed
