tg-1357/1359 fix falta categoria y se subrayan las camas ocupadas en detalle de cama

--- a/front-end/webapp/src/assets/i18n/camas/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/camas/es-AR.json
@@ -11,6 +11,7 @@
             "NO_BED": "Seleccione una cama para ver el detalle",
             "SPECIALTY": "Especialidad",
             "SECTOR": "Sector",
+            "CATEGORY": "Categoría",
             "ROOM": "Habitación:",
             "PATIENT": "Paciente:",
             "PROBABLE_DISCHARGE_DATE": "Fecha de alta probable: ",
