tg-1375. [BE] Implementar endpoint para cancelar turnos

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -124,3 +124,4 @@ appointment.new.diary.inactive=Diary inactive
 appointment.new.professional.assign.not.allowed=Diary does not allow assignments by professional
 appointment.new.professional.id.invalid=Diary does not belong to the professional
 appointment.not.allow.new.overturn=New overturn is not allowed
+appointment.state.id.invalid=Invalid appointment state
