--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -125,3 +125,4 @@ appointment.new.diary.inactive=La agenda se encuentra inactiva
 appointment.new.professional.assign.not.allowed=La agenda no permite que profesionales asignen turnos
 appointment.new.professional.id.invalid=La agenda no pertenece al profesional indicado
 appointment.not.allow.new.overturn=No se permiten nuevos sobreturnos
+appointment.state.id.invalid=Estado de turno inválido
