tg-1224 fix CR comments

--- a/front-end/webapp/src/assets/i18n/camas/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/camas/es-AR.json
@@ -15,7 +15,9 @@
             "ROOM": "Habitación:",
             "PATIENT": "Paciente:",
             "PROBABLE_DISCHARGE_DATE": "Fecha de alta probable: ",
-            "NO_DISCHARGE_DATE": "Sin información"
+            "NO_DISCHARGE_DATE": "Sin información",
+            "FREE": "Libre",
+            "NOT_FREE": "Ocupada"
         },
         "filters": {
             "FREE_BEDS": "Ver camas ocupadas",
