tg-1342 Controlar asignación de roles que requieren que el usuario sea profesional

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -38,6 +38,7 @@ role.invalid=Role id invalid
 role.min.value=Id role has to be greater than 1
 invalid.user=User invalid
 role-level.institution.required=Role requires an institution
+role.requiresprofessional=Some of the assigned roles requires the user to be a healthcare professional
 
 
 ####### Patient #######
