--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -37,6 +37,7 @@ role.invalid=Id rol invalido
 role.min.value=Id rol tiene que ser mayor a 1
 invalid.user=Usuario invalido
 role-level.institution.required=El rol requiere una institución
+role.requiresprofessional=Alguno de los roles asignados requiere que el usuario sea un profesional
 
 
 ####### Patient #######
