--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -126,3 +126,4 @@ appointment.new.professional.assign.not.allowed=Diary does not allow assignments
 appointment.new.professional.id.invalid=Diary does not belong to the professional
 appointment.not.allow.new.overturn=New overturn is not allowed
 appointment.state.id.invalid=Invalid appointment state
+appointment.new.without.medical.coverage=Medical coverage must be specified
