--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -129,3 +129,4 @@ appointment.new.professional.assign.not.allowed=La agenda no permite que profesi
 appointment.new.professional.id.invalid=La agenda no pertenece al profesional indicado
 appointment.not.allow.new.overturn=No se permiten nuevos sobreturnos
 appointment.state.id.invalid=Estado de turno inválido
+appointment.new.without.medical.coverage=Debe especificarse una cobertura médica 
