tg-1327. Relevar cosas a limpiar del repositorio. Typos

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -53,9 +53,9 @@ institution.invalid=Invalid institution
 
 
 ####### Clinical history #######
-clinicalobservation.effetivetime.mandatory=Measurement datetime mandatory
-clinicalobservation.effetivetime.future=Measurement datetime have to be before or equals to the current datetime
-clinicalobservation.effetivetime.before.entrydate=Measurement datetime have to be after internment entry date
+clinical.observation.effective.time.mandatory=Measurement datetime mandatory
+clinical.observation.effective.time.future=Measurement datetime have to be before or equals to the current datetime
+clinical.observation.effective.time.before.entry.date=Measurement datetime have to be after internment entry date
 
 snomed.invalid=Save SnomedCT code failed
 snomed.id.max.value=Sctid must be 20 characters long
