--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -54,9 +54,9 @@ institution.invalid=Institución desconocida
 
 
 ####### Clinical history #######
-clinicalobservation.effetivetime.mandatory=Fecha de medición es obligatoria
-clinicalobservation.effetivetime.future=La fecha de medición debe ser anterior o igual a la fecha y hora actual
-clinicalobservation.effetivetime.before.entrydate=La fecha de medición debe ser posterior a la fecha de internación
+clinical.observation.effective.time.mandatory=Fecha de medición es obligatoria
+clinical.observation.effective.time.future=La fecha de medición debe ser anterior o igual a la fecha y hora actual
+clinical.observation.effective.time.before.entry.date=La fecha de medición debe ser posterior a la fecha de internación
 
 
 snomed.invalid=Fallo al guardar código SnomedCT
