--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -118,6 +118,8 @@ diary.period.invalid.range=La fecha de comienzo de la agenda debe ser anterior a
 diary.period.invalid.year=El período definido para la agenda debe corresponder al mismo año calendario
 diary.period.invalid.overlap=Ya existe una agenda similar definida en un período de tiempo superpuesto
 diary.attention.invalid.overlap=No es posible definir horarios de atención superpuestos
+diary.appointments.invalid=La agenda seleccionada posee turnos activos fuera de las nuevas franjas horarias
+diary.overturns.limitExceeded=Se superó el límite de sobreturnos para el horario de atención
 
 ####### Appointments #######
 appointment.error.validation=Error de validación
