tg-1395 Se puede borrar profesional que posee rol medico/enfermero/prof de la salud

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -39,7 +39,7 @@ role.min.value=Id role has to be greater than 1
 invalid.user=User invalid
 role-level.institution.required=Role requires an institution
 role.requiresprofessional=Some of the assigned roles requires the user to be a healthcare professional
-
+user.hasrole=The professional you are trying to delete has an associated role.
 
 ####### Patient #######
 patient.invalid=Invalid patient
