--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -38,6 +38,7 @@ role.min.value=Id rol tiene que ser mayor a 1
 invalid.user=Usuario invalido
 role-level.institution.required=El rol requiere una institución
 role.requiresprofessional=Alguno de los roles asignados requiere que el usuario sea un profesional
+user.hasrole=El profesional que quiere eliminar tiene un rol asociado.
 
 
 ####### Patient #######
