tg-1321 [BE] Endpoint para eliminar agenda

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -114,12 +114,14 @@ healthcareprofessional.exists=Esta persona ya está registrada como profesional 
 problem.dates.not.after= La fecha de fin no puede ser anterior al inicio del problema.
 
 ####### Diary #######
+diary.invalid.id=No existe una agenda para el id de agenda especificado
 diary.period.invalid=El periodo definido para la agenda es inválido
 diary.period.invalid.range=La fecha de comienzo de la agenda debe ser anterior a la fecha de fin
 diary.period.invalid.year=El período definido para la agenda debe corresponder al mismo año calendario
 diary.period.invalid.overlap=Ya existe una agenda similar definida en un período de tiempo superpuesto
 diary.attention.invalid.overlap=No es posible definir horarios de atención superpuestos
 diary.appointments.invalid=La agenda seleccionada posee turnos activos fuera de las nuevas franjas horarias
+diary.appointments.invalid.cancelled=La agenda a eliminar posee turnos asociados sin cancelar 
 diary.overturns.limitExceeded=Se superó el límite de sobreturnos para el horario de atención
 
 ####### Appointments #######
