tg-1364 eliminacion de agenda y boton de edicion

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -18,6 +18,7 @@
 		"CONTINUE": "Continuar",
 		"CONFIRM": "Confirmar",
 		"CLOSE": "Cerrar",
+		"DELETE":"Eliminar",
 		"SEARCH": "Buscar",
 		"UPDATE": "Actualizar",
 		"GENERATE": "Generar"
