tg-1241 [FE] Agrega motivos multiples en Consulta Ambulatoria

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -28,7 +28,14 @@
 				},
 				"motivo": {
 					"TITLE": "Motivo de consulta",
-					"MOTIVO": "motivo"
+					"MOTIVO": "motivo",
+					"ADD": "Agregar motivo",
+					"table": {
+						"TITLE": "Motivos registrados",
+						"columns": {
+							"MOTIVO": "Motivos"
+						}
+					}
 				},
 				"medicaciones": {
 					"CONCEPT_LABEL": "Medicación",
