tg-1450 [BE] Validacion turnos contemplar agendas eliminadas

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -128,6 +128,7 @@ diary.overturns.limitExceeded=Se superó el límite de sobreturnos para el horar
 appointment.error.validation=Error de validación
 appointment.overlapping=Ya existe un turno asignado en la misma hora
 appointment.new.diary.inactive=La agenda se encuentra inactiva
+appointment.new.diary.deleted=La agenda se encuentra eliminada
 appointment.new.professional.assign.not.allowed=La agenda no permite que profesionales asignen turnos
 appointment.new.professional.id.invalid=La agenda no pertenece al profesional indicado
 appointment.not.allow.new.overturn=No se permiten nuevos sobreturnos
