--- a/front-end/webapp/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/turnos/es-AR.json
@@ -14,10 +14,10 @@
 			"EDIT_AGENDA": "Editar agenda",
 			"CONFIRM_NEW_AGENDA": "¿Desea confirmar la creación de esta nueva agenda?",
 			"CONFIRM_EDIT_AGENDA": "¿Desea confirmar la edición de esta agenda?",
-			"OVERTURN_COUNT":" Cantidad de sobreturnos",
-			"MEDICAL_ATTENTION_TYPE" : "Tipo de atención",
+			"OVERTURN_COUNT": " Cantidad de sobreturnos",
+			"MEDICAL_ATTENTION_TYPE": "Tipo de atención",
 			"dialog": {
-				"TITLE":"Nueva atención"
+				"TITLE": "Nueva atención"
 			},
 			"messages": {
 				"SUCCESS": "La agenda se guardó exitosamente"
@@ -27,6 +27,19 @@
 			"DELETE": "Eliminar agenda",
 			"messages": {
 				"SUCCESS": "La agenda se eliminó exitosamente"
+			}
+		},
+		"new-appointment": {
+			"NEW_APPOINTMENT": "Nuevo turno",
+			"BUTTON_ADD_PATIENT": "Crear paciente",
+			"BUTTON_SEARCH": "Buscar",
+			"STEP_1": "Búsqueda de paciente",
+			"STEP_2": "Confirmar turno",
+			"messages": {
+				"ERROR": "Paciente no encontrado",
+				"SUCCESS": "Paciente encontrado",
+				"APPOINTMENT_ERROR": "Error al confirmar el turno",
+				"APPOINTMENT_SUCCESS": "Turno confirmado"
 			}
 		}
 	}
