--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -93,7 +93,7 @@ vitalsign.temperature=temperatura corporal
 
 ####### Doctor's Office ########
 doctorsoffices.closingBeforeOpening=La hora de apertura no puede ser posterior a la hora de cierre.
-doctorsoffices.matchingIds= La Especialidad | Sector seleccionada no pertenece a esa institución."
+doctorsoffices.matchingIds= La Especialidad | Sector seleccionada no pertenece a esa institución.
 
 ####### Bed #######
 beds.existsInternmentEpisode=La cama tiene un episodio de internación y no puede marcarse como libre.
@@ -114,6 +114,7 @@ healthcareprofessional.exists=Esta persona ya está registrada como profesional 
 problem.dates.not.after= La fecha de fin no puede ser anterior al inicio del problema.
 
 ####### Diary #######
+diary.error.validation=Error de validación
 diary.invalid.id=No existe una agenda para el id de agenda especificado
 diary.period.invalid=El periodo definido para la agenda es inválido
 diary.period.invalid.range=La fecha de comienzo de la agenda debe ser anterior a la fecha de fin
@@ -123,6 +124,7 @@ diary.attention.invalid.overlap=No es posible definir horarios de atención supe
 diary.appointments.invalid=La agenda seleccionada posee turnos activos fuera de las nuevas franjas horarias
 diary.appointments.invalid.cancelled=La agenda a eliminar posee turnos asociados sin cancelar 
 diary.overturns.limitExceeded=Se superó el límite de sobreturnos para el horario de atención
+diary.deleted=La agenda se encuentra eliminada
 
 ####### Appointments #######
 appointment.error.validation=Error de validación
