tg-1453 Correccion de permisos para turnos

--- a/front-end/webapp/src/assets/i18n/auth/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/auth/es-AR.json
@@ -41,7 +41,8 @@
 				"ADMINISTRATIVO": "Administrativo",
 				"ENFERMERO_ADULTO_MAYOR": "Enfermero adulto mayor",
 				"ENFERMERO": "Enfermero",
-				"ADMINISTRADOR_INSTITUCIONAL_BACKOFFICE":  "Administrador institucional"
+				"ADMINISTRADOR_INSTITUCIONAL_BACKOFFICE":  "Administrador institucional",
+				"ADMINISTRADOR_AGENDA": "Administrador de agenda"
 			}
 		}
 	}
