--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -107,6 +107,7 @@ document.pdf.maindiagnosis.title.minsal=Main diagnosis
 
 ####### Healthcare Professional #######
 healthcareprofessional.exists=This person is already registered as a professional 
+healthcare-professional.specialty-profession-exists=The profession specialty already exists
 
 ####### Outpatient #######
 problem.dates.not.after= End date cannot be before of start date
