--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -109,6 +109,7 @@ document.pdf.maindiagnosis.title.minsal=Diagnóstico principal
 
 ####### Healthcare Professional #######
 healthcareprofessional.exists=Esta persona ya está registrada como profesional en el sistema
+healthcare-professional.specialty-profession-exists=La profesión y especialidad ya se encuentra asignada
 
 ####### Outpatient #######
 problem.dates.not.after= La fecha de fin no puede ser anterior al inicio del problema.
