tg-1398 Se pueden cambiar las propiedades de una cama que tiene un episodio de internación

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -93,7 +93,7 @@ doctorsoffices.matchingIds= Selected Specialty | Sector does not belong to that 
 
 
 ####### Bed #######
-beds.existsInternmentEpisode=The bed has an internment episode and can't be marked as free.
+beds.existsHospitalization=The bed can't be edited as it has an hospitalization episode associated.
 
 ####### Documents #######
 document.invalid=Invalid document
