--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -96,7 +96,7 @@ doctorsoffices.closingBeforeOpening=La hora de apertura no puede ser posterior a
 doctorsoffices.matchingIds= La Especialidad | Sector seleccionada no pertenece a esa institución.
 
 ####### Bed #######
-beds.existsInternmentEpisode=La cama tiene un episodio de internación y no puede marcarse como libre.
+beds.existsHospitalization=La cama no puede editarse porque tiene un episodio de internación activo.
 
 ####### Documents #######
 document.invalid=Documento desconocido
