--- a/front-end/webapp/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/turnos/es-AR.json
@@ -30,7 +30,7 @@
 			}
 		},
 		"new-appointment": {
-			"NEW_APPOINTMENT": "Nuevo turno",
+			"NEW_APPOINTMENT": "Nuevo turno {{date}} {{hour}}",
 			"BUTTON_ADD_PATIENT": "Crear paciente",
 			"BUTTON_SEARCH": "Buscar",
 			"STEP_1": "Búsqueda de paciente",
