tg-1448 [FE] Agrega Card de problemas de internacion en solapa Problemas - Ambulatoria

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -126,7 +126,8 @@
 				"TITLE": "Problemas y evoluciones",
 				"ACTIVOS": "Problemas activos",
 				"CRONICOS": "Problemas crónicos",
-				"RESUELTOS": "Problemas resueltos"
+				"RESUELTOS": "Problemas resueltos",
+				"INTERNACION": "Problemas de internación"
 			},
 			"profile": {
 				"BUTTON_HISTORIA_CLINICA": "Historia Clínica",
