--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -313,7 +313,6 @@
 				"MEDICAL_DISCHARGE": "Alta médica",
 				"PROBABLE_DISCHARGE": "Alta probable",
 				"RELOCATE_PATIENT_BED": "Generar pase de cama"
-
 			},
 			"alergias-summary": {
 				"ADD": "Agregar alergia",
@@ -378,6 +377,7 @@
 			"SECTION_BED": "Asignación de cama",
 			"SECTION_CONTACT": "Contacto responsable",
 			"SECTION_DOCTOR": "Médico responsable",
+			"BED_ASSIGNMENT_BUTTON": "ASIGNAR CAMA",
 			"messages": {
 				"ERROR": "Error al crear una nueva internacion",
 				"SUCCESS": "La internación se guardó exitosamente"
@@ -411,11 +411,11 @@
 			"TITLE": "Generación pase de cama",
 			"SECTION_ORIGIN": "Datos cama origen",
 			"SECTION_DESTINATION": "Datos cama destino",
-			"SECTION_DATE":"Fecha de pase",
-			"form":{
-				"DESTINATION_SPECIALTY":"Servicio/Especialidad destino",
-				"ORIGIN_BED":"N° de cama origen",
-				"DESTINATION_BED":"N° de cama destino"
+			"SECTION_DATE": "Fecha de pase",
+			"form": {
+				"DESTINATION_SPECIALTY": "Servicio/Especialidad destino",
+				"ORIGIN_BED": "N° de cama origen",
+				"DESTINATION_BED": "N° de cama destino"
 			},
 			"messages": {
 				"CONFIRMACION": "¿Está seguro que desea realizar el pase de cama? ",
