tg-1505 ver detalle de cama con boton editar al asignar nueva cama en nueva internacion

--- a/front-end/webapp/src/assets/i18n/camas/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/camas/es-AR.json
@@ -12,7 +12,7 @@
             "SPECIALTY": "Especialidad",
             "SECTOR": "Sector",
             "CATEGORY": "Categoría",
-            "ROOM": "Habitación:",
+            "ROOM": "Habitación",
             "PATIENT": "Paciente:",
             "PROBABLE_DISCHARGE_DATE": "Fecha de alta probable: ",
             "NO_DISCHARGE_DATE": "Sin información",
