tg-1554 [BE] Guardar historico estados de turnos

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -137,4 +137,6 @@ appointment.new.professional.assign.not.allowed=La agenda no permite que profesi
 appointment.new.professional.id.invalid=La agenda no pertenece al profesional indicado
 appointment.not.allow.new.overturn=No se permiten nuevos sobreturnos
 appointment.state.id.invalid=Estado de turno inválido
+appointment.state.transition.invalid=Nuevo estado de turno inválido
+appointment.state.reason.invalid=Debe especificarse el motivo
 appointment.new.without.medical.coverage=Debe especificarse una cobertura médica 
