tg-1571. [FE] Ocultar botón nueva consulta, aplicar vacuna sí no tiene un turno confirmado asociado al médico

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -151,7 +151,8 @@
 					"ADMINISTRATION_DATE": "Fecha de vacunación",
 					"save": {
 						"SUCCESS": "La vacuna aplicada se guardó exitosamente",
-						"ERROR": "Error al guardar la vacuna aplicada"
+						"ERROR": "Error al guardar la vacuna aplicada",
+						"CHANGE_STATE": "¿Desea aplicar más vacunas?"
 					}
 				}
 			}
