--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -112,6 +112,7 @@ healthcare-professional.id.error.validation=Only can see own diaries
 
 ####### Outpatient #######
 problem.dates.not.after= End date cannot be before of start date
+outpatient.appointment.valid=Patient does not have an appointment
 
 ####### Diary #######
 diary.period.invalid=Invalid diary period
