--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -114,6 +114,7 @@ healthcare-professional.id.error.validation=Solo se puede ver agendas propias
 
 ####### Outpatient #######
 problem.dates.not.after= La fecha de fin no puede ser anterior al inicio del problema.
+outpatient.appointment.valid=El paciente no tiene un turno  asociado
 
 ####### Diary #######
 diary.error.validation=Error de validación
