tg-1598 [FE] Abstrae servicio para procedimientos en historia clinica

--- a/front-end/webapp/src/assets/i18n/historia-clinica/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/historia-clinica/es-AR.json
@@ -12,7 +12,11 @@
       },
       "vacunas": {
         "TOOLTIP": "Agregar vacuna"
-      }
-    }
+	  }
+	},
+	"procedimientos": {
+		"FECHA": "Fecha",
+		"PROCEDIMIENTO": "Procedimiento"
+	}
   }
 }
