tg-1567 [FE] Creacion de sobreturno

--- a/front-end/webapp/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/turnos/es-AR.json
@@ -48,7 +48,10 @@
 			"SUCCESS": "El turno fue cancelado exitosamente"
 		},
 		"overturns":{
-			"CREATE":"Crear sobreturno"
+			"CREATE":"Crear sobreturno",
+			"messages":{
+				"ERROR":"No es posible crear un sobreturno en este rango horario"
+			}
 		}
 	}
 }
