tg-1615 reutilizar popup de asignacion de camas para generar el pase de cama en una internacion

--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -417,6 +417,7 @@
 			"SECTION_ORIGIN": "Datos cama origen",
 			"SECTION_DESTINATION": "Datos cama destino",
 			"SECTION_DATE": "Fecha de pase",
+			"BED_ASSIGNMENT": "Asigne una nueva cama para esta internación",
 			"form": {
 				"DESTINATION_SPECIALTY": "Servicio/Especialidad destino",
 				"ORIGIN_BED": "N° de cama origen",
