tg-1611 [FE] Agrega procedimientos en historico de evoluciones

--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -132,7 +132,8 @@
 				"TABLE_TITLE": "Procedimientos registrados",
 				"TITLE": "Procedimiento",
 				"TIPO": "Tipo de procedimiento",
-				"PROCEDIMIENTO": "Procedimiento"
+				"PROCEDIMIENTO": "Procedimiento",
+				"PROCEDIMIENTOS": "Procedimientos"
 			}
 		},
 		"epicrisis": {
