tg-1496 [BE] Validar turnos en dias pasados
(cherry picked from commit 8a17793953f710505c8081320ca1f5eeb6919d6c)

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -141,3 +141,4 @@ appointment.state.id.invalid=Estado de turno inválido
 appointment.state.transition.invalid=Nuevo estado de turno inválido
 appointment.state.reason.invalid=Debe especificarse el motivo
 appointment.new.without.medical.coverage=Debe especificarse una cobertura médica 
+appointment.new.beforeToday=La fecha del turno no puede ser anterior al dia de hoy
