tg-1595. [FE] Actualizar labels de los botones de cancelar y confirmar en la pregunta de sí desea aplicar nuevas vacunas

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -22,7 +22,9 @@
 		"SEARCH": "Buscar",
 		"UPDATE": "Actualizar",
 		"GENERATE": "Generar",
-		"EDIT": "Editar"
+		"EDIT": "Editar",
+		"NO": "No",
+		"YES": "Si"
 	},
 	"forms": {
 		"REQUIRED": "El campo es requerido",
