tg-1674 [FE] Informar existencia de mas resultados SNOMED

--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -388,7 +388,9 @@
 		},
 		"snomed-search": {
 			"modal": {
-				"SUBTITLE": "Resultados de búsqueda para: "
+				"TITLE": "Búsqueda de conceptos",
+				"SUBTITLE": "Se encontraron {{resultsLength}} resultados en la búsqueda para: ",
+				"LIMIT_WARNING": "Si no se encuentra el resultado esperado, por favor refine la búsqueda"
 			}
 		},
 		"discharge": {
