tg-1749 [Mejora] Corrige falta ortografica en toast de confirmación

--- a/front-end/webapp/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/pacientes/es-AR.json
@@ -75,7 +75,7 @@
 			"SUBTITLE": "Se editara el paciente seleccionado",
 			"messages": {
 				"ERROR": "Error al editar un paciente",
-				"SUCCESS": "El paciente se edito exitosamente"
+				"SUCCESS": "El paciente se editó exitosamente"
 			}
 		}
 	}
