tg-1631. [P2] Se cargan procedimientos repetidos

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -69,6 +69,7 @@ diagnosis.mandatory=Main diagnosis mandatory
 diagnosis.main.repeated=Repeated main diagnosis
 diagnosis.secondary.repeated.principal= Diagnosis defined as principal
 diagnosis.repeated=Repeated diagnosis
+procedures.repeated=Repeated procedures
 health.history.condition.repeated=Repeated records
 anamnesis.exist=Internment has an anamnesis yet
 epicrisis.exist=Internment has an epicrisis yet
