--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -72,6 +72,7 @@ diagnosis.mandatory=Diagnóstico principal obligatorio
 diagnosis.main.repeated= Diagnóstico principal repetido
 diagnosis.secondary.repeated.principal= Diagnósticos definidos como principal 
 diagnosis.repeated=Diagnósticos repetidos
+procedures.repeated=Procedimientos repetidos
 health.history.condition.repeated= Antecedentes repetidos
 anamnesis.exist=La internación ya contiene una anamnesis
 epicrisis.exist=La internación contiene un documento de epicrisis
