--- a/front-end/webapp/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/turnos/es-AR.json
@@ -4,10 +4,13 @@
 			"TITLE": "Gestión de turnos",
 			"actions": {
 				"APPLY_FOR": "Solicitar",
+				"CREATE_AGENDA": "Crear agenda",
 				"NEW_AGENDA": "Nueva agenda",
 				"SEARCH": "Buscar profesional"
 			},
-			"SELECT_AGENDA": "Seleccione una agenda"
+			"SELECT_AGENDA": "Seleccione una agenda",
+			"NO_AGENDA_MSG_TITLE": "El profesional no posee una agenda activa.",
+			"NO_AGENDA_MSG_SUBTITLE": "Creá una agenda para gestionar turnos."
 		},
 		"agenda-setup": {
 			"NEW_AGENDA": "Nueva agenda",
