--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -131,3 +131,6 @@ appointment.new.professional.id.invalid=Diary does not belong to the professiona
 appointment.not.allow.new.overturn=New overturn is not allowed
 appointment.state.id.invalid=Invalid appointment state
 appointment.new.without.medical.coverage=Medical coverage must be specified
+
+####### Health Insurance #######
+health-insurance.not.found = Health Insurance does not exists
