--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -144,3 +144,6 @@ appointment.state.reason.invalid=Debe especificarse el motivo
 appointment.new.without.medical.coverage=Debe especificarse una cobertura médica 
 appointment.new.beforeToday=La fecha del turno no puede ser anterior al dia de hoy
 appointment.new.phoneNumber.invalid=El número telefónico debe contener hasta 20 caracteres 
+
+####### Health Insurance #######
+health-insurance.not.found = La obra social no existe
