tg-1812 [FE] Agrega botón de edición de paciente en ficha de internacion

--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -313,7 +313,8 @@
 				"ADMINISTRATIVE_DISCHARGE": "Alta administrativa",
 				"MEDICAL_DISCHARGE": "Alta médica",
 				"PROBABLE_DISCHARGE": "Alta probable",
-				"RELOCATE_PATIENT_BED": "Generar pase de cama"
+				"RELOCATE_PATIENT_BED": "Generar pase de cama",
+				"EDIT_PATIENT": "Editar paciente"
 			},
 			"alergias-summary": {
 				"ADD": "Agregar alergia",
