tg-1854/1855/1858/1859 fix bugs sobre el front end de historicode problemas

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -139,6 +139,7 @@
 				"ERROR_CONFIRMAR_POPUP": "Ocurrió un error al resolver el problema",
 				"historical-problems": {
 					"NO_FILTERED_PROBLEMS": "No hay resultados para la búsqueda seleccionada",
+					"NO_HISTORICAL": "No existe informacion para mostrar",
 					"HISTORICAL_TITLE": "Histórico de evoluciones",
 					"REASONS": "Motivos",
 					"PROCEDURES": "Procedimientos",
