tg-1831 [BE] Validar que no se puedan borrar todas las especialidades

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -112,6 +112,8 @@ document.pdf.maindiagnosis.title.minsal=Diagnóstico principal
 healthcareprofessional.exists=Esta persona ya está registrada como profesional en el sistema
 healthcare-professional.specialty-profession-exists=La profesión y especialidad ya se encuentra asignada
 healthcare-professional.id.error.validation=Solo se puede ver agendas propias
+healthcare-professional.only-one-specialty=Esta especialidad no puede borrarse dado que es la única que posee el profesional
+healthcare-professional.specialty-profession-not-exists=La especialidad no existe
 
 ####### Outpatient #######
 problem.dates.not.after= La fecha de fin no puede ser anterior al inicio del problema.
