--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -114,6 +114,7 @@ healthcare-professional.specialty-profession-exists=La profesión y especialidad
 healthcare-professional.id.error.validation=Solo se puede ver agendas propias
 healthcare-professional.only-one-specialty=Esta especialidad no puede borrarse dado que es la única que posee el profesional
 healthcare-professional.specialty-profession-not-exists=La especialidad no existe
+healtcare-professional.affected-to-diary-agenda=Esta especialidad y profesional están afectados a una agenda en curso
 
 ####### Outpatient #######
 problem.dates.not.after= La fecha de fin no puede ser anterior al inicio del problema.
