--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -145,7 +145,7 @@ appointment.state.id.invalid=Estado de turno inválido
 appointment.state.transition.invalid=Nuevo estado de turno inválido
 appointment.state.reason.invalid=Debe especificarse el motivo
 appointment.new.without.medical.coverage=Debe especificarse una cobertura médica 
-appointment.new.beforeToday=La fecha del turno no puede ser anterior al dia de hoy
+appointment.new.beforeToday=La fecha del turno no puede ser anterior al día de hoy
 appointment.new.phoneNumber.invalid=El número telefónico debe contener entre 1 y 20 caracteres
 
 ####### Health Insurance #######
