--- a/front-end/webapp/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/turnos/es-AR.json
@@ -19,6 +19,8 @@
 			"CONFIRM_EDIT_AGENDA": "¿Desea confirmar la edición de esta agenda?",
 			"OVERTURN_COUNT": " Cantidad de sobreturnos",
 			"MEDICAL_ATTENTION_TYPE": "Tipo de atención",
+			"SELECT_DAYS_TYPE": "Días y tipo de consulta",
+			"SELECT_DAYS_TYPE_SUBTITLE": "Seleccione tipos de consulta para cada día",
 			"dialog": {
 				"TITLE": "Nueva atención"
 			},
@@ -39,7 +41,7 @@
 			"STEP_1": "Búsqueda de paciente",
 			"STEP_2": "Confirmar turno",
 			"TEMPORARY_PATIENT": "Paciente temporal",
-			"PATIENT_ID":"ID del paciente",
+			"PATIENT_ID": "ID del paciente",
 			"messages": {
 				"ERROR": "Paciente no encontrado",
 				"SUCCESS": "Paciente encontrado",
@@ -48,21 +50,20 @@
 			}
 		},
 		"cancel": {
-			"TITLE":"Cancelar turno",
-			"CONFIRM":"¿Desea cancelar el turno seleccionado?",
+			"TITLE": "Cancelar turno",
+			"CONFIRM": "¿Desea cancelar el turno seleccionado?",
 			"SUCCESS": "El turno fue cancelado exitosamente"
 		},
-		"overturns":{
-			"CREATE":"Crear sobreturno",
-			"messages":{
-				"ERROR":"No es posible crear un sobreturno en este rango horario"
+		"overturns": {
+			"CREATE": "Crear sobreturno",
+			"messages": {
+				"ERROR": "No es posible crear un sobreturno en este rango horario"
 			}
 		},
-		"appointment":{
+		"appointment": {
 			"phoneNumber": {
-				"SUCCESS":"El teléfono se modificó correctamente"
+				"SUCCESS": "El teléfono se modificó correctamente"
 			}
-
 		}
 	}
 }
