tg-1766. [BE] Ajustar endpoint de edición de datos del paciente para validar que campos se pueden o no editar

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -44,6 +44,7 @@ user.hasrole=The professional you are trying to delete has an associated role.
 ####### Patient #######
 patient.invalid=Invalid patient
 patient.filter.null=Empty fields on filter
+patient.update.invalid=Patient update not allowed
 
 ####### Person #######
 person.invalid=Invalid person
