--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -43,6 +43,7 @@ user.hasrole=El profesional que quiere eliminar tiene un rol asociado.
 
 ####### Patient #######
 patient.invalid=Paciente desconocido
+patient.update.invalid=Actualización de paciente no permitida
 
 ####### Person #######
 person.invalid=Persona desconocida
