tg-1906 [BE] agrega DateDtoValidator

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -137,3 +137,6 @@ appointment.new.phoneNumber.invalid= The phone number must contain up to 20 char
 
 ####### Health Insurance #######
 health-insurance.not.found = Health Insurance does not exists
+
+####### Date #######
+date-dto.invalid-day = Day doesn't exists in month
