--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -152,3 +152,6 @@ appointment.new.phoneNumber.invalid=El número telefónico debe contener hasta 2
 
 ####### Health Insurance #######
 health-insurance.not.found = La obra social no existe
+
+####### Date #######
+date-dto.invalid = El día ingresado no es existe en el mes
