tg-1908 responsive historico de evoluciones

--- a/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/ambulatoria/es-AR.json
@@ -144,7 +144,8 @@
 					"REASONS": "Motivos",
 					"PROCEDURES": "Procedimientos",
 					"PROFESSIONAL": "Médico",
-					"EVOLUTION_NOTE": "Descripción/Resumen"
+					"EVOLUTION_NOTE": "Descripción/Resumen",
+					"CONSULTATION_DATE": "Fecha de consulta"
 				},
 				"historical-filters": {
 					"SPECIALITY": "Especialidad",
