tg-1906 [BE] mueve todas las validaciones a DateDtoValidator para evitar problemas de orden de ejecucion

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -140,3 +140,8 @@ health-insurance.not.found = Health Insurance does not exists
 
 ####### Date #######
 date-dto.invalid-day = Day doesn't exists in month
+date-dto.not-null = This field can't be null
+date-dto.day.invalid = Day field can't be less than 1
+date-dto.month.invalid = Month field must be between values 1 and 12
+date-dto.year.invalid = Year field can't be less than 0
+
