--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -154,4 +154,9 @@ appointment.new.phoneNumber.invalid=El número telefónico debe contener hasta 2
 health-insurance.not.found = La obra social no existe
 
 ####### Date #######
-date-dto.invalid = El día ingresado no es existe en el mes
+date-dto.invalid = El día ingresado no existe en el mes
+date-dto.not-null = El campo no puede ser null
+date-dto.day.invalid = El día debe ser un valor entre 1 y 31
+date-dto.month.invalid = El mes debe ser un valor entre 1 y 12
+date-dto.year.invalid = El año no puede ser menor a 0
+
