tg-1935 [FE] Nuevo componente de campo editable y refactor en telefono del turno

--- a/front-end/webapp/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/turnos/es-AR.json
@@ -62,7 +62,8 @@
 		},
 		"appointment": {
 			"phoneNumber": {
-				"SUCCESS": "El teléfono se modificó correctamente"
+				"SUCCESS": "El teléfono se modificó correctamente",
+				"PHONE_NUMBER": "Teléfono"
 			}
 		}
 	}
