tg-1924 Cambia a opcionales los nros de teléfono de turnos

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -132,7 +132,7 @@ appointment.new.professional.id.invalid=Diary does not belong to the professiona
 appointment.not.allow.new.overturn=New overturn is not allowed
 appointment.state.id.invalid=Invalid appointment state
 appointment.new.without.medical.coverage=Medical coverage must be specified
-appointment.new.phoneNumber.invalid= The phone number must contain between 1 and 20 characters
+appointment.new.phoneNumber.invalid= The phone number must contain up to 20 characters
 
 ####### Health Insurance #######
 health-insurance.not.found = Health Insurance does not exists
