--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -147,7 +147,7 @@ appointment.state.transition.invalid=Nuevo estado de turno inválido
 appointment.state.reason.invalid=Debe especificarse el motivo
 appointment.new.without.medical.coverage=Debe especificarse una cobertura médica 
 appointment.new.beforeToday=La fecha del turno no puede ser anterior al día de hoy
-appointment.new.phoneNumber.invalid=El número telefónico debe contener entre 1 y 20 caracteres
+appointment.new.phoneNumber.invalid=El número telefónico debe contener hasta 20 caracteres
 
 ####### Health Insurance #######
 health-insurance.not.found = La obra social no existe
