tg-938 [BE] agregar validacion en maximos y minimos en datos antropometricos

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -70,6 +70,7 @@ diagnosis.mandatory=Main diagnosis mandatory
 diagnosis.main.repeated=Repeated main diagnosis
 diagnosis.secondary.repeated.principal= Diagnosis defined as principal
 diagnosis.repeated=Repeated diagnosis
+diagnosis.anthropometric.invalid=Anthropometric data invalid. Weight and Height must have values between 0 and 1000
 procedures.repeated=Repeated procedures
 health.history.condition.repeated=Repeated records
 anamnesis.exist=Internment has an anamnesis yet
