--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -73,6 +73,7 @@ diagnosis.mandatory=Diagnóstico principal obligatorio
 diagnosis.main.repeated= Diagnóstico principal repetido
 diagnosis.secondary.repeated.principal= Diagnósticos definidos como principal 
 diagnosis.repeated=Diagnósticos repetidos
+diagnosis.anthropometric.invalid=Datos antropométricos no válidos. Peso y altura deben tener valores entre 0 y 1000
 procedures.repeated=Procedimientos repetidos
 health.history.condition.repeated= Antecedentes repetidos
 anamnesis.exist=La internación ya contiene una anamnesis
